--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,7 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   overflow-x: hidden;
+  overflow-y: hidden;
   margin: 0;
   padding: 0;
 }
